Closed Bug 84847 Opened 23 years ago Closed 23 years ago

Refresh displays stale content when using Squid proxy

Categories

(Core :: Networking: HTTP, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: sedough, Assigned: darin.moz)

References

()

Details

Attachments

(2 files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux 2.4.5 i686; en-US; rv:0.9.1+) Gecko/20010607
BuildID:    2001060708

At http://freshmeat.net and a few other sites, Mozilla 0.9+ displays old
content. Hitting the refresh button doesn't refresh the page. Mozilla 0.8.1
doesn't have this problem, and it only happens when using the proxy.

Reproducible: Always
Steps to Reproduce:
1.Goto http://freshmeat.net and see stale content.
2.Hit refresh button.

Actual Results:  Old articles are displayed with wrong date and time.

Expected Results:  Page should have been refreshed with current content.

My (Mozilla) memory cache is set to 1024K, and the disk cache is set to 0. My
proxy is Squid version 2.3.STABLE4.
Darin, could this be an HTTP validation issue?  He has his disk cache set to 0 
bytes, which puts it into kind of a strange mode at the moment.
Assignee: gordon → neeti
Status: UNCONFIRMED → NEW
Component: Networking: Cache → Networking: HTTP
Ever confirmed: true
QA Contact: tever → benc
This worksforme with a linux build pulled on 6/11
Reporter: could youtry this with the latest builds
Keywords: qawanted
Still having problems with the 6/12/2001 build.  Here are the request headers
sent to the proxy when I hit reload  (Mozilla 0.8.1 shown for comparison):

Host: freshmeat.net
User-Agent: Mozilla/5.0 (X11; U; Linux 2.4.5 i686; en-US; 0.8.1) Gecko/20010326
Pragma: no-cache
Cache-Control: max-age=0
Accept: */*
Accept-Language: en
Accept-Encoding: gzip,deflate,compress,identity
Keep-Alive: 300
Connection: keep-alive

Host: freshmeat.net
User-Agent: Mozilla/5.0 (X11; U; Linux 2.4.5 i686; en-US; rv:0.9.1+)
Gecko/2001$Accept: text/xml, application/xml, application/xhtml+xml,
text/html;q=0.9, imag$Accept-Language: en-us
Accept-Encoding: gzip,deflate,compress,identity
Accept-Charset: ISO-8859-1, utf-8; q=0.667, *; q=0.667
Keep-Alive: 300
Connection: keep-alive
If-Modified-Since: Tue, 12 Jun 2001 19:53:13 GMT


The newer builds omit the "Pragma: no cache" header and send an
If-Modified-Since header instead.  Is this correct behavior for a reload?
Reporter: do you see the time displayed on the page changing after you do a 
reload?
No.  The time stays the same after a reload on 0.9+.
benc or tever: could you reproduce this. 
it was decided to make reload, reload from the nearest link (in this case the
proxy) instead of reload from the origin server.  shift-reload forces a reload
from the origin server.  this behavior (unlike that of moz 0.8.1) is consistent
with netscape4x and IE.  reporter: please compare mozilla's current behavior to
these other browsers.

sounds like this bug is INVALID to me.
Mozilla 0.8.1, Netscape 4.76, and IE 5.5 send the "no-cache" directive to the 
proxy when the reload button is pressed.  Mozilla 0.9+ does not.

If it was a design decision to reload from the proxy, how about sending a "max-
age=0" directive to force the proxy to revalidate its contents?  I don't think 
HTTP/1.0 supports this though.
just testing w/o a proxy server, i don't see IE 5.5 sending the Pragma: no-cache.
perhaps it only sends it when talking to a proxy server.  nav 4.7 does send the
Pragma: no-cache header along with an if-modified-since header.  i'm not sure
what meaning the if-modified-since header can have if accompanied by a Pragma:
no-cache, other than for the origin server.  i'm going to try IE with a proxy
server.
OK.. so, IE only sends the "Pragma: no-cache" if talking to a proxy server, and
it also still sends the conditional headers (If-modified-since and If-none-match).

-> me
Assignee: neeti → darin
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.2
Priority: -- → P3
-qawanted, I've got this
+makingtest, I need to research and document this.
Keywords: qawantedmakingtest
this patch returns our behavior to that of mozilla-0.8.1 (and prior versions).
according to RFC2616 this is what we should be doing.  it was a mistake to have
ever changed it.  the spec does not require us to send 'Pragma: no-cache' when
validating cached content.
Keywords: patch
r=gagan
let really make sure this gets bang on by qa. (s)r=me
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
I think the patch broke broke something.  On various pages (cnn.com, freshmeat,
etc), some images aren't being requested.  This problem appeared in today's
build (2001061909), and only comes up when using a proxy.  Setting the HTTP
version to 1.0 gets around the problem.

Is this considered a new bug?
If the squid behavior works, I would create a new bug...
sedough: thanks for the follow up info... could you please file a new bug
describing the new symptoms/problems.  thanks!
It must have been a fluke.  The problem disappeared in today's snapshot. 
Everything works great.  Thanks!
Verified.
Status: RESOLVED → VERIFIED
QA Contact: benc → junruh
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: