Fixes bug 84847 "refresh displays stale content when using squid proxy" r=gagan, sr=dougt, a=asa