netwerk/protocol/http/src/nsHttpChannel.cpp
@@ -318,8 +318,14 @@ nsHttpChannel::SetupTransaction()
     if (mLoadFlags & LOAD_BYPASS_CACHE) {
         // We need to send 'Pragma:no-cache' to inhibit proxy caching even if
         // no proxy is configured since we might be talking with a transparent
-        // proxy, i.e. one that operates at the network level.  See bug #14772
+        // proxy, i.e. one that operates at the network level.  See bug #14772.
         mRequestHead.SetHeader(nsHttp::Pragma, "no-cache");
+        mRequestHead.SetHeader(nsHttp::Cache_Control, "no-cache");
+    }
+    else if ((mLoadFlags & VALIDATE_ALWAYS) && (mCacheAccess & nsICache::ACCESS_READ)) {
+        // We need to send 'Cache-Control: max-age=0' to force each cache along
+        // the path to the origin server to revalidate its own entry, if any,
+        // with the next cache or server.  See bug #84847.
         mRequestHead.SetHeader(nsHttp::Cache_Control, "max-age=0");
     }
 
@@ -849,7 +855,7 @@ end:
         // Add If-Modified-Since header if a Last-Modified was given
         val = mCachedResponseHead->PeekHeader(nsHttp::Last_Modified);
         if (!val) {
-            LOG(("No Last-Lodified header sent, using the Date header instead...\n"));
+            LOG(("No Last-Modified header sent, using the Date header instead...\n"));
             val = mCachedResponseHead->PeekHeader(nsHttp::Date);
         }
         if (val)
